[build-system]
    requires = ["setuptools>=75", "wheel"]
    build-backend = "setuptools.build_meta"

    [project]
    name = "autoguard-grounded-diagnosis"
    version = "0.1.0"
    description = "Evidence-grounded tool-using AI agent for autonomous vehicle root-cause diagnosis"
    readme = "README.md"
    requires-python = ">=3.11"
    license = {text = "MIT"}
    authors = [{name = "AutoGuard Labs"}]
    dependencies = [
      "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.10,<3",
  "httpx>=0.27,<1"
    ]

    [project.optional-dependencies]
    dev = ["pytest>=8,<10", "ruff>=0.9,<1", "httpx>=0.27,<1"]
    duckdb = [
  "duckdb>=1.2,<2"
]

    [tool.setuptools.packages.find]
    where = ["src"]

    [tool.pytest.ini_options]
    pythonpath = ["src", "."]
    testpaths = ["tests"]
    addopts = "-q"

    [tool.ruff]
    line-length = 100
    target-version = "py311"
